# Async_API

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml  mypy.ini  pyproject.toml
services/api/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
services/api/src/: main.py
services/api/src/api/v1/: actors.py  directors.py  films.py  genres.py  persons.py  writers.py
services/api/src/core/: config.py
services/api/src/db/: elastic.py  redis.py
services/api/src/models/: actors.py  directors.py  film.py  genre.py  writers.py
services/api/src/services/: actors.py  cache.py  directors.py  elastic_storage.py  film.py  genre.py  person.py  search.py  storage.py  writers.py
services/api/tests/functional/: conftest.py  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  local.tests.env  pytest.ini  requirements.txt  settings.py  tests.env
services/api/tests/functional/assets/: es_genres.json  es_movies.json  es_persons.json
services/api/tests/functional/fixtures/: api.py  assets.py  es.py  redis.py
services/api/tests/functional/src/: disabled_test_genre.py  test_genre.py  test_search.py
services/api/tests/functional/tests/: test_film.py  test_genre.py  test_person.py  test_search.py
services/api/tests/functional/utils/: backoff.py  is_uuid_valid.py  wait_for_es.py  wait_for_redis.py
services/etl/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt  test_data_transfer.py
services/etl/documents/: movie.py
services/etl/logic/: elastic_loader.py  postgres_producer.py
services/etl/resources/: genre_index.json  movie_index.json
services/etl/schemas/: elasticsearch.py  postgres.py
services/etl/utils/: backoff.py  logging_settings.py  settings.py  state.py
services/etl/utils/storages/: base_storage.py  json_storage.py  redis_storage.py
services/nginx/: Dockerfile
services/nginx/conf.d/: default.conf
src/: .env.example  docker-compose.yml  main.py  pre-commit-config.yaml
src/api/: films.py
src/core/: config.py
src/docker/api/: Dockerfile
src/docker/nginx/conf.d/: default.conf
src/models/: film.py
src/services/: film.py
tools/: database_dump.sql  format_code.py
