[project]
name = "async-api"
version = "0.1.0"
description = ""
authors = [
    {name = "maksbolomoznov",email = "bolomozhnov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "urllib3 (<2.0.0)"
]

[tool.poetry.dependencies]

fastapi = "0.111.0"
elasticsearch = {extras = ["async"], version = "8.13.2"}
redis = "5.0.4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false