[project]
name = "async-api"
version = "0.1.0"
description = ""
authors = [
    {name = "maksbolomoznov",email = "bolomozhnov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "urllib3 (<2.0.0)"
]

[tool.poetry.dependencies]

fastapi = "0.111.0"
elasticsearch = {extras = ["async"], version = "8.13.2"}
redis = "5.0.4"
flake8 = "7.2.0"
flake8-builtins = "2.0.0"
flake8-comprehensions = "3.10.0"
flake8-debugger = "4.1.2"
flake8-eradicate = "1.4.0"



[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false