[project]
name = "async-api"
version = "0.1.0"
description = ""
authors = [
    {name = "maksbolomoznov",email = "bolomozhnov@gmail.com"},
    {name = "alexander-petrovichev",email = "alexpetro000@gmail.com"},
    {name = "zakhar-lyrschikov",email = "lirchzakhar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-bugbear = "^24.10.31"
flake8-builtins = "^2.5.0"
flake8-class-attributes-order = "^0.1.3"
flake8-comprehensions = "^3.16.0"
flake8-eradicate = "^1.5.0"
flake8-print = "^5.0.0"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.2.0"
mypy = "^1.13.0"
add-trailing-comma = "^3.1.0"


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

