[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "maksbolomoznov",email = "bolomozhnov@gmail.com"},
    {name = "alexander-petrovichev",email = "alexpetro000@gmail.com"},
    {name = "zakhar-lyrschikov",email = "lirchzakhar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<1.2.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
]

[tool.poetry]
packages = [{include = "*", from = "src"}]
package-mode = false

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20250515"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
